# drink_safe

./: .env.example  .gitignore  Dockerfile  README.md  README_alt.md  docker-compose.yml  experiment.py  main.py  mlflow.db  prometheus.yml  pyproject.toml  run_middleware.py  structure.md  structure.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
consignes/: 1_spec_fonctionnelles.md  2_cahiers_des_charges.md  3_etat_avancement.md
docker/mlflow/: Dockerfile
docs/: RGPD.md  archi.md  archi.mmd  architecture.mmd  architecture_v.mmd  bugfix.md  bugfix_2.md  data_model.md  erDiagram.mmd  flux_prediction.mmd  pipeline_mlops.mmd  schema.md  user_stories.md  veille_OCR.md
docs/incidents/: bugfix.md  incident_DNS_rebinding.md  incident_a_faire.md  incident_ocr.md  monitoring_incidents.md
front/: analyste.py  app.py  app_old.py  auth.py  client.py  exploitation.py
front/static/css/: main.css  main_OLD.css
front/templates/: base.html  login.html
front/templates/analyste/: dashboard.html
front/templates/client/: dashboard.html
front/templates/exploitation/: dashboard.html
grafana/dashboards/: dashboard-1784536913455.json
mlruns/0/: meta.yaml
mlruns/381877254186828501/: meta.yaml
mlruns/381877254186828501/0a5bb499b3814465bd425fa76353c6f6/: meta.yaml
mlruns/381877254186828501/60775538ce04494191cc121c152c226f/: meta.yaml
mlruns/381877254186828501/60775538ce04494191cc121c152c226f/metrics/: false_negative  roc_auc  true_negative
mlruns/381877254186828501/dd1329b006fa4b5bb38b4118b427e0c9/: meta.yaml
mlruns/381877254186828501/dd1329b006fa4b5bb38b4118b427e0c9/metrics/: f1_score  precision  recall  true_negative
mlruns/381877254186828501/dd54d6aea5c24dc6884c03104fd9bfb1/metrics/: accuracy  recall  roc_auc  true_positive
mlruns/381877254186828501/dd54d6aea5c24dc6884c03104fd9bfb1/params/: target
mlruns/381877254186828501/models/m-0f6faff515c54ea5a30d4538f0c8c6ca/: meta.yaml
monitoring/: alerting.yml  dashboards.yml  datasources.yml
monitoring/dashboards/: dashboard_red.json
notebooks/: eda.ipynb
runs/381877254186828501/69973ed34ad74c249567e976956eddc6/: meta.yaml
runs/381877254186828501/dd54d6aea5c24dc6884c03104fd9bfb1/: meta.yaml
scripts/: seed_admins.py
scripts/auth/: hash_admin_passwords.py  migrate_keys_to_hash.py  seed_admins.py
scripts/dat_prep/: analysis_utils.py  cleaning_utils.py
src/: analysis_utils.py  api.py  api_old.py  cleaning_utils.py  config.py  experiment.py  init_mlflow.py  middleware.py  models.py  train.py
src/dependencies/: auth.py
src/middleware/: __init__.py  __init__py  bdd.py  config.py  routes.py
src/routes/: clients.py  measurements.py  monitoring.py  ocr.py  predictions.py
tests/: test_functionnal.py  test_non_regression.py  test_unit.py
(+45 files in other folders)
