[project]
name = "waterflow"
version = "0.1.0"
description = "MLOps"
readme = "README.md"
requires-python = ">=3.12"

# 1. UNIQUEMENT LA PROD (dans le bloc [project])
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "mlflow==2.11.3",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.32.0",
    "xgboost>=2.0.0",
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
    "psycopg2-binary>=2.9.12",
    "setuptools<70.0.0",
    "ruff>=0.15.15",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Indique à uv/pip que le code source se trouve dans le dossier courant
[tool.setuptools]
package-dir = {"" = "src"}


# 2. LES GROUPES LOGIQUES AVEC UV

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "pytest>=9.0.3",
    "seaborn>=0.13.0",
]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]


[tool.ruff]
# Appliquer les règles : E (Error), F (Pyflakes), I (isort/Imports)
select = ["E", "F", "I"]
line-length = 88

[tool.ruff.lint]
# Optionnel : si tu veux que Ruff corrige automatiquement certains problèmes
fixable = ["ALL"]
